spacing between top windows fixed.

--- a/homestyles.css
+++ b/homestyles.css
@@ -264,7 +264,8 @@ strong {
     border-width: 2px;
     margin-right: 10px;
     padding: 3px;
-    padding-bottom: 0;
+    padding-top: 1px;
+    padding-bottom: 0px;
 }
 
     #toppart:hover {
@@ -278,7 +279,8 @@ strong {
     width: 100%;
     height: 30px;
     /*padding: 3px;*/
-    padding-bottom: 0px;
+    padding-top: 0;
+    padding-bottom: 0;
     /*font-size: smaller;*/
     color: #462DC6;
 /*    background-color: #e2e2e2;*/
@@ -373,6 +375,7 @@ strong {
     border: solid;
     border-color: #462DC6;
     border-width: 2px;
+    margin-top: 1px;
 }
 
 #leftSidebar {
